--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Welcome to my Digital Signal Processing site!
+descrption: Here you can find some useful MATLAB files used for processing digital audio and image files.
