--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Digital Signal Processing
+title: Jesse Tao
 email: jesse.p.tao@gmail.com
 url: https://auisgold.github.io
 description: "This is my site where I post all my cool DSP Matlab files"
